new setup for tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,19 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+    <div> <!--content wrapper-->
+       <div>
+        <nav>
+            <div>
+                <h1>
+                    <a href="/">Sami Recipes</a>
+                </h1>
+            </div>
+            <ul>
+                
+            </ul>
+        </nav>
+       </div>   
+    </div>
 </body>
 </html>
