new setup for tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
                 </h1>
             </div>
             <ul>
-                
+                <li>
+                    <a href="#"><span>Home</span></a>
+                </li>
             </ul>
         </nav>
        </div>   
