new setup for tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div> <!--content wrapper-->
-       <div>
+       <div> <!--navbar-->
         <nav>
             <div>
                 <h1>
@@ -18,9 +18,22 @@
                 <li>
                     <a href="#"><span>Home</span></a>
                 </li>
+                <li>
+                    <a href="#"><span>About</span></a>
+                </li>
+                <li>
+                    <a href="#"><span>Contact</span></a>
+                </li>
             </ul>
         </nav>
-       </div>   
+       </div> <!--navbar-->  
+
+       <main>
+            <div>
+                <a href="#">Login</a>
+                <a href="#">Sign up</a>
+            </div>
+       </main>
     </div>
 </body>
 </html>
