new setup for tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,12 @@
                 <a href="#">Login</a>
                 <a href="#">Sign up</a>
             </div>
+            <header>
+                <h2>Recipes</h2>
+                <h3>Dive in the world of sweet meals</h3>
+            </header>
+
+            
        </main>
     </div>
 </body>
